--- a/styles/margot-base/partials/general.css
+++ b/styles/margot-base/partials/general.css
@@ -120,6 +120,9 @@ a.yeswiki-editable .icon-edit {
   font-size: .8rem;
   margin-left: 2px;
 }
+.dropdown-menu {
+  font-size: inherit;
+}
 
 pre {
   color: inherit;
