--- a/styles/margot-fun/general.css
+++ b/styles/margot-fun/general.css
@@ -77,8 +77,10 @@ h1, h3, h4, h5, h6 {
   --checkbox-color: var(--secondary-color-2);
   --neutral-light-color: var(--secondary-color-2);
 }
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover, .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-  color: var(--neutral-color);
+.nav-tabs {
+  border-bottom: 3px solid var(--neutral-color);
+  --primary-color: var(--neutral-color);
+  --link-color: var(--neutral-color);
 }
 .table-condensed>tbody>tr>td:first-child strong, .table-condensed>tbody>tr>td:first-child h1, .table-condensed>tbody>tr>td:first-child h2, .table-condensed>tbody>tr>td:first-child h3, .table-condensed>tbody>tr>td:first-child h4, .table-condensed>tbody>tr>td:first-child h5, .table-condensed>tbody>tr>td:first-child h6 {
   color: var(--neutral-color);
