--- a/styles/margot.css
+++ b/styles/margot.css
@@ -10,6 +10,7 @@
 @import 'margot-base/partials/page-edit.css';
 @import 'margot-base/partials/bazar.css';
 @import 'margot-base/partials/admin.css';
+@import 'margot-base/partials/vertical-menu.css';
 
 @import 'margot-base/components/buttons.css';
 @import 'margot-base/components/bootstrap-components.css';
