fix default font-family

--- a/styles/margot-fun.css
+++ b/styles/margot-fun.css
@@ -34,6 +34,11 @@
   --main-bg-color: white;
   --main-container-bg-color: white;
 
+  /* Default values when there is no preset */
+  --main-text-fontsize: 17px;
+  --main-text-fontfamily: "Nunito", sans-serif;
+  --main-title-fontfamily:'Nunito', sans-serif;
+  
   /* Links */
   --link-color: var(--neutral-soft-color);
   --link-hover-color: var(--neutral-color);
