--- a/styles/margot-base/partials/general.css
+++ b/styles/margot-base/partials/general.css
@@ -60,22 +60,30 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 3.2rem;
   letter-spacing: -.5px;
+  font-weight:100; 
+  color:var(--title-h1-color);
 }
 
 h2 {
   font-size: 2rem;
+  font-weight:300; 
+  color:var(--title-h2-color); 
 }
 
 h3 {
   font-size: 1.5rem;
+  color:var(--title-h3-color);
 }
 
 h4 {
   font-size: 1.2rem;
+  color:var(--title-h4-color);
 }
 
-h5 {
-  font-size: 1.2rem;
+h5 { 
+   font-size: 1rem;
+   color: var(--title-h5-color);
+   font-weight: 700;
 }
 
 h6 {
