--- a/styles/margot.css
+++ b/styles/margot.css
@@ -42,6 +42,11 @@
   --main-text-fontsize: 17px;
   --main-text-fontfamily: "Nunito", sans-serif;
   --main-title-fontfamily:'Nunito', sans-serif;
+  --title-h1-color:var(--neutral-color);
+  --title-h2-color:var(--primary-color);
+  --title-h3-color:var(--secondary-color-1);
+  --title-h4-color:var(--secondary-color-2);
+  --title-h5-color:var(--secondary-color-2);
 
   /* Links */
   --link-color: var(--primary-color);
@@ -66,7 +71,7 @@
   --footer-bg-color: transparent;
   --footer-text-color: var(--main-text-color);
   --footer-title-color: var(--main-text-color);
-  --footer-border-top: 3px solid var(--neutral-soft-color);
+  --footer-border: 3px solid var(--neutral-soft-color);
 
   --btn-border: none;
   --btn-border-radius: .5em;
