use darker primary color for a11y

--- a/presets/default.css
+++ b/presets/default.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #1a89a0;
+  --primary-color: #105d6c;
   --secondary-color-1: #d8604c;
   --secondary-color-2: #d78958;
   --neutral-color: #4e5056;
