--- a/styles/margot-base/components/forms.css
+++ b/styles/margot-base/components/forms.css
@@ -3,14 +3,15 @@
   margin-right: 0;
 }
 .symbole_obligatoire:after {
-  margin-left: .25em;
+  margin-left: 0.25em;
 }
 .form-horizontal {
   margin: 10px 0;
 }
-.form-control, #form-builder-container  {
+.form-control,
+#form-builder-container {
   height: 46px;
-  padding: .5em 1em .4em 1em;
+  padding: 0.5em 1em 0.4em 1em;
   font-size: var(--main-text-fontsize);
   color: var(--main-text-color);
   border: 2px solid var(--primary-color);
@@ -18,9 +19,10 @@
   background-color: #f9f9f9;
 }
 .form-control {
-  padding: 3px 1em 0 .8em;
+  padding: 3px 1em 0 0.8em;
 }
-.ace-editor-container, .ace-body {
+.ace-editor-container,
+.ace-body {
   background-color: #f9f9f9;
 }
 .note-editor.note-frame .note-editing-area .note-editable {
@@ -77,7 +79,8 @@ form#form-modal-upload .form-group:not(.file):not(.checkbox) .control-label,
 form#form-modal-upload .form-group.wrapper.checkbox .control-label {
   background-color: white;
 }
-.form-group.wrapper.checkbox .control-label, .form-group.wrapper.radio .control-label {
+.form-group.wrapper.checkbox .control-label,
+.form-group.wrapper.radio .control-label {
   bottom: calc(100% - 8px);
 }
 .form-group:not(.file):not(.checkbox) .control-label {
@@ -122,26 +125,33 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
 .form-group.date .controls {
   display: flex;
 }
-.form-group.date .select-time{
+.form-group.date .select-time {
   margin-left: 1.5rem;
 }
-.form-group.date .select-hour, .form-group.date .select-minutes {
+.form-group.date .select-hour,
+.form-group.date .select-minutes {
   width: 80px !important;
 }
-.form-group.date .select-allday, .form-group.date .select-minutes {
+.form-group.date .select-allday,
+.form-group.date .select-minutes {
   border-left: none !important;
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
-.form-group.date .bazar-date, .form-group.date .select-hour {
+.form-group.date .bazar-date,
+.form-group.date .select-hour {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
 }
 .datepicker table tr td.active {
   background-color: var(--primary-color) !important;
 }
-.table-condensed>tbody>tr>td, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>td,
-.table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>thead>tr>th {
+.table-condensed > tbody > tr > td,
+.table-condensed > tbody > tr > th,
+.table-condensed > tfoot > tr > td,
+.table-condensed > tfoot > tr > th,
+.table-condensed > thead > tr > td,
+.table-condensed > thead > tr > th {
   padding: 2px 8px;
 }
 .datepicker-dropdown {
@@ -151,11 +161,11 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
 .form-group.wiki-textarea .control-label {
   position: relative !important;
   top: 1.7rem !important;
-  left: .2rem !important;
+  left: 0.2rem !important;
   margin-left: 10px;
 }
 .form-group.wrapper .control-label {
-  left: .75rem!important;
+  left: 0.75rem !important;
 }
 .form-group.input.file .control-label {
   margin-bottom: 5px;
@@ -176,7 +186,7 @@ form#form-modal-upload .form-group.wrapper.checkbox .control-label {
 }
 
 select.input-sm {
-  font-size: .9em;
+  font-size: 0.9em;
   padding: 1px 5px;
 }
 label .symbole_obligatoire {
@@ -185,17 +195,17 @@ label .symbole_obligatoire {
 .controls .btn-toolbar {
   margin-top: 0;
 }
-input.form-control[type=file] {
+input.form-control[type="file"] {
   padding-left: 0;
-  padding-top: .5em;
+  padding-top: 0.5em;
   cursor: pointer;
   position: relative;
 }
-input.form-control[type=file]::before {
+input.form-control[type="file"]::before {
   content: "Choisir un fichier";
   position: absolute;
   top: 0;
-  font-size: .9em;
+  font-size: 0.9em;
   cursor: pointer;
   width: 143px;
   text-align: center;
@@ -226,19 +236,24 @@ input.form-control[type=file]::before {
 }
 a.input-group-addon:hover {
   color: var(--neutral-light-color);
-  opacity: .9;
+  opacity: 0.9;
 }
-.form-control + .input-group-addon, input + .input-group-addon {
+.form-control + .input-group-addon,
+input + .input-group-addon {
   border-radius: 0 5px 5px 0;
 }
-.input-group-addon + .form-control, .input-group-addon + input {
+.input-group-addon + .form-control,
+.input-group-addon + input {
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
-.input-group .form-control:not(:first-child):not(:last-child), .input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child) {
+.input-group .form-control:not(:first-child):not(:last-child),
+.input-group-addon:not(:first-child):not(:last-child),
+.input-group-btn:not(:first-child):not(:last-child) {
   border-radius: 0 !important;
 }
-.input-group-addon, .input-group-btn {
+.input-group-addon,
+.input-group-btn {
   width: auto;
 }
 .input-prepend input {
@@ -261,10 +276,10 @@ a.input-group-addon:hover {
   line-height: 2.7rem;
   height: 2.7rem;
 }
-input[type=file] ~ output {
+input[type="file"] ~ output {
   padding: 0;
 }
-input[type=file] ~ output img {
+input[type="file"] ~ output img {
   border-radius: 3px;
   height: 150px;
   margin-top: 10px;
@@ -281,10 +296,10 @@ form .col-sm-9 {
 }
 .symbole_obligatoire.col-sm-9.col-sm-offset-3 {
   position: absolute;
-  bottom: .7em;
+  bottom: 0.7em;
   right: 0;
   width: auto;
-  font-size: .9em;
+  font-size: 0.9em;
 }
 .bazar-checkbox-cols {
   column-width: 250px;
@@ -296,14 +311,15 @@ form .col-sm-9 {
 }
 .form-help {
   cursor: help;
-  margin-left: .3rem;
+  margin-left: 0.3rem;
   margin-right: 3px;
 }
 .form-group:not(.file):not(.checkbox) .control-label .form-help {
-  margin-left: .6rem;
+  margin-left: 0.6rem;
 }
 
-.input-group-addon:last-child, .input-group-btn:last-child > .btn {
+.input-group-addon:last-child,
+.input-group-btn:last-child > .btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   height: 46px;
@@ -326,24 +342,30 @@ form .col-sm-9 {
 }
 
 .leaflet-control-container .leaflet-bar.leaflet-control {
-  
   background-color: var(--neutral-light-color);
 }
 .leaflet-control-container .leaflet-bar.leaflet-control a {
   color: var(--primary-color);
 }
 
-.leaflet-control-container .leaflet-control-zoom-fullscreen.fullscreen-icon:before {
+.leaflet-control-container
+  .leaflet-control-zoom-fullscreen.fullscreen-icon:before {
   color: var(--neutral-color);
 }
 
 @media (max-width: 800px) {
-  .textarea .btn-toolbar > .btn-group { display: none; }
-  .form-group.wiki-textarea .control-label { top: .7rem; }
-  input.form-control[type=file]::before { padding: 1px 1rem 0 .8rem; }
+  .textarea .btn-toolbar > .btn-group {
+    display: none;
+  }
+  .form-group.wiki-textarea .control-label {
+    top: 0.7rem;
+  }
+  input.form-control[type="file"]::before {
+    padding: 1px 1rem 0 0.8rem;
+  }
 }
 
-.form-group.summernote .controls{
+.form-group.summernote .controls {
   padding: 0;
   margin-top: 0;
 }
@@ -351,7 +373,9 @@ form .col-sm-9 {
   margin-bottom: 0;
   border: none;
 }
-.form-group.summernote .note-editable { padding: 1em; }
+.form-group.summernote .note-editable {
+  padding: 1em;
+}
 
 .form-horizontal .radio.inline-container,
 .form-horizontal .checkbox.inline-container {
@@ -366,9 +390,35 @@ form .col-sm-9 {
 }
 
 .help-block {
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
-.form-group.wrapper .checkbox, .form-group.wrapper .radio {
+.form-group.wrapper .checkbox,
+.form-group.wrapper .radio {
   padding-top: 5px;
+}
+/* handle textarea with aceditor */
+.scroll-container-toolbar {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scroll-container-toolbar::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.scroll-container-toolbar .aceditor-toolbar {
+  width: 900px;
+  padding-bottom: 8px;
+}
+.form-group.wiki-textarea .control-label {
+  position: relative !important;
+  top: 59px !important;
+  left: 1.7rem !important;
+  margin-top: -20px;
+}
+.aceditor-container .btn-toolbar .btn {
+  font-size: 16px; /* we use a fixed size for toolbar*/
 }
