--- a/styles/light.css
+++ b/styles/light.css
@@ -19,7 +19,7 @@
 
  --navbar-link-hover-color:var(--primary-color); 
 }
-#yw-topnav {  box-shadow: 0px 0px 20px #0000000f;}
+#yw-topnav { border-bottom: 1px solid var(--neutral-light-color);}
 
 @media (max-width: 1200px) {
   :root {
