--- a/styles/margot-base/components/bootstrap-components.css
+++ b/styles/margot-base/components/bootstrap-components.css
@@ -5,6 +5,8 @@
   padding: 1rem 1.75rem;
   border-radius: .5rem;
 }
+section {padding:1rem;}
+
 @media (max-width: 1200px) {
   section.full-width .container { padding: 0 1.5rem; }
 }
