feat(header): make first saection orf a page behave like a header

--- a/styles/margot-base/partials/header.css
+++ b/styles/margot-base/partials/header.css
@@ -21,3 +21,7 @@
 #yw-header .navbar-header {
   display: none;
 }
+/* make the first section in a page higher, to behave like a header */
+.page > :first-child:is(section) {
+  margin-top: -1.5rem;
+}
